# WarCraft

./: CMakeLists.txt  README.md
include/: Archmage.h  DeathKnight.h  Defines.h  DrawRanger.h  Hero.h
src/: Archmage.c  DeathKnight.c  DrawRanger.c  Hero.c  castSpell.c  main.c
